fix chart paging:

--- a/src/app/get-votes/get-votes.component.html
+++ b/src/app/get-votes/get-votes.component.html
@@ -29,4 +29,4 @@
         <p>{{ raceData.raceUrl }}</p>
     </div>        
 </div>     
-<app-votes-table [state_selected]="state_selected" [selected_sort]="selected_sort" [thePresVotes]="thePresVotes"></app-votes-table>
+<app-votes-table [thePresVotes]="thePresVotes"></app-votes-table>
